Add automotive benchmarks' Makefiles

--- a/automotive/bitcount/Makefile
+++ b/automotive/bitcount/Makefile
@@ -1,3 +1,5 @@
+all: bitcnts
+
 FILE = bitcnt_1.c bitcnt_2.c bitcnt_3.c bitcnt_4.c bitcnts.c bitfiles.c bitstrng.c bstr_i.c 
 
 bitcnts: ${FILE} Makefile
